--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button class="info-btn pikachu-btn" id="infoPikachu">i</button>
           <button
             class="kies-btn pikachu-btn"
-            data-sound="pokemons/Pickachu/pikachu_scream.mp3"
+            data-sound="./pokemons/Pickachu/pikachu_scream.mp3"
             data-name="Pikachu"
             data-attack="50"
             data-special="90"
@@ -50,7 +50,7 @@
           <button class="info-btn charmander-btn" id="infoCharmender">i</button>
           <button
             class="kies-btn charmander-btn"
-            data-sound="pokemons/Charmander/charmander.mp3"
+            data-sound="./pokemons/Charmander/charmander.mp3"
             data-name="Charmender"
             data-attack="30"
             data-special="65"
@@ -65,7 +65,7 @@
           <button class="info-btn squirtle-btn">i</button>
           <button
             class="kies-btn squirtle-btn"
-            data-sound="pokemons/squirtle/y2mate_0zCjkXt.mp3"
+            data-sound="./pokemons/squirtle/y2mate_0zCjkXt.mp3"
             data-name="Squirtle"
             data-attack="25"
             data-special="50"
@@ -80,7 +80,7 @@
           <button class="info-btn bulbasaur-btn">i</button>
           <button
             class="kies-btn bulbasaur-btn"
-            data-sound="pokemons/bulbasaur/bulbasaur-1.mp3"
+            data-sound="./pokemons/bulbasaur/bulbasaur-1.mp3"
             data-name="Bulbasaur"
             data-attack="37"
             data-special="57"
@@ -95,7 +95,7 @@
           <button class="info-btn machop-btn">i</button>
           <button
             class="kies-btn machop-btn"
-            data-sound="pokemons/machop/machop-101soundboards.mp3"
+            data-sound="./pokemons/machop/machop-101soundboards.mp3"
             data-name="Machop"
             data-attack="40"
             data-special="67"
@@ -110,7 +110,7 @@
           <button class="info-btn poliwag-btn">i</button>
           <button
             class="kies-btn poliwag-btn"
-            data-sound="pokemons/poliwag/1-101soundboards.mp3"
+            data-sound="./pokemons/poliwag/1-101soundboards.mp3"
             data-name="Poliwag"
             data-attack="20"
             data-special="50"
